--- a/_config.yml
+++ b/_config.yml
@@ -1,5 +1,5 @@
-title: Cayman theme
-description: Cayman is a clean, responsive theme for GitHub Pages.
+title: Anders Bo Justesen
+description: My research interests are exoplanetary systems and binary stars. I'm particularly interested in the formation and dynamical evolution of these systems. 
 show_downloads: true
 google_analytics:
 theme: jekyll-theme-cayman
