--- a/_config.yml
+++ b/_config.yml
@@ -1,5 +1,5 @@
 title: Anders Bo Justesen
-description: My research interests are exoplanetary systems and binary stars. I'm particularly interested in the formation and dynamical evolution of these systems. 
+description: 
 show_downloads: true
 google_analytics:
 theme: jekyll-theme-cayman
